Prepare for initial release
- Add unit tests
- Add functional tests
- Update documentation